# SAMUEL

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  README.md  SAMUEL.sln  SAMUEL.vcxproj  SAMUEL.vcxproj.filters
source/: DDSHeader.cpp  DDSHeader.h  FileExporter.cpp  FileExporter.h  PackageMapSpec.cpp  PackageMapSpec.h  ResourceFile.cpp  ResourceFile.h  SAMUEL.cpp  SAMUEL.h  StreamDBFile.cpp  StreamDBFile.h  Utilities.cpp  Utilities.h
source/cli/: main.cpp
source/core/: Common.h  Config.h  DDSHeader.cpp  DDSHeader.h  ExportBIM.cpp  ExportBIM.h  ExportCOMP.cpp  ExportCOMP.h  ExportDECL.cpp  ExportDECL.h  ExportLWO.cpp  ExportLWO.h  ExportMD6.cpp  ExportMD6.h  ExportManager.cpp  ExportManager.h  ExportModel.cpp  ExportModel.h  FileExporter.cpp  FileExporter.h  Oodle.cpp  Oodle.h  PackageMapSpec.cpp  PackageMapSpec.h  ResourceFile.cpp  ResourceFile.h  ResourceFileReader.cpp  ResourceFileReader.h  ResourceManager.cpp  ResourceManager.h  SAMUEL.cpp  SAMUEL.h  Utilities.cpp  Utilities.h
source/core/cast/: cast.cpp  cast.h
source/core/exportTypes/: CAST.cpp  CAST.h  DDSHeader.cpp  DDSHeader.h  OBJ.cpp  OBJ.h  PNG.cpp  PNG.h
source/core/idFileTypes/: BIM.cpp  BIM.h  DECL.cpp  DECL.h  LWO.cpp  LWO.h  MD6.cpp  MD6.h  MD6Mesh.cpp  MD6Mesh.h  MD6Skl.cpp  MD6Skl.h  PackageMapSpec.cpp  PackageMapSpec.h  ResourceFile.cpp  ResourceFile.h  StreamDBFile.cpp  StreamDBFile.h  StreamDBGeometry.cpp  StreamDBGeometry.h
source/qt/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
